<resources>
    <string name="app_name">BMICalculatorC003サンプル</string>
    <string name="tv_title">BMI計算機</string>
    <string name="tv_age">年齢</string>
    <string name="tv_age1">歳</string>
    <string name="tv_height">身長</string>
    <string name="tv_height1">cm</string>
    <string name="tv_weight">体重</string>
    <string name="tv_weight1">kg</string>
    <string name="bt_calculation">計算</string>
    <string name="bt_clear">クリア</string>
</resources>